--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,15 @@ num = "0.4"
 image = "0.23"
 rayon = "1.5"
 rand = "0.8"
+winit = "0.26"
+wgpu = "0.12"
+pixels = "0.9"
+
+# wasm-bindgen = "0.2"
+# getrandom = { version = "0.2", features = ["js"] }
+
+# [profile.release]
+# opt-level = "s"
+
+# [lib]
+# crate-type = ["cdylib", "rlib"]
